<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.0</version>
  <description>Robot bringup package</description>
  <maintainer email="your_email@example.com">pepper11com</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>launch_ros</depend>
  <depend>rf2o_laser_odometry</depend>
  <depend>slam_toolbox</depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend> <!-- For the launch file -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
