<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro model of the car robot</description>

  <!-- ADD THIS: tells colcon we are an ament-cmake package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <!-- xacro → URDF happens at launch time -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>


